public class Ford extends Car{
    public Ford(){
        setEngineSize(2000);
        setColour("Blue");
    }
}
