public class Honda extends Car{
    public Honda(){
        setEngineSize(2600);
        setColour("Green");
    }
}
